Fixed image cropping

--- a/styles.css
+++ b/styles.css
@@ -29,5 +29,5 @@ img {
 .card img {
     max-width: 100%;
     height: 250px;
-    object-fit: cover;
+    object-fit: contain;
 }
